--- a/Project.toml
+++ b/Project.toml
@@ -6,4 +6,5 @@ version = "0.1.0"
 [deps]
 CxxInterface = "62027b0a-52e9-423e-ab47-e314c210e772"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+STL_jll = "69cf8a62-f9ae-5d65-8d00-30585a4771ef"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
